# Realm-Engine

./: .clang-format  .clang-tidy  BuildAndRun.sh  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/glad/include/glad/: gl.h
shader/: default_raster.frag  default_raster.vert  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  test.frag  test.vert  vertices.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  context.cpp  context.h  engine.cpp  engine.h  engine_context.cpp  engine_context.h  global.cpp  global.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  model.cpp  model.h  opengl_glfw.h  renderer.cpp  renderer.h  shader.cpp  shader.h  window.cpp  window.h
src/render/: context.h  framebuffer.cpp  framebuffer.h  framebuffer_mgr.cpp  pass.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h  state.cpp  state.h  window.cpp  window.h
src/render/pass/: gbuffer_pass.cpp  gbuffer_pass.h  geometry_pass.cpp  lighting_pass.cpp  lighting_pass.h  post_processing_pass.cpp  post_processing_pass.h  shadow_pass.cpp  shadow_pass.h  ui_pass.cpp  ui_pass.h
src/resource/: camera.cpp  camera.h  model.cpp  model.h  resource.cpp  resource.h  scene.cpp  scene.h
